Site section 1 opacity fixed

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
     <!-- main content -->
     <main>
-        <section>
+        <section class="home-intro">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-12 column section-1-column-1">
